Handle Fractions Handle the possibility that DHT11 may return a non zero value for fraction bytes
, update to remove rrdtool reference

--- a/dht11_driver/Makefile
+++ b/dht11_driver/Makefile
@@ -14,22 +14,16 @@ objects = pi_2_mmio.o common_dht_read.o pi_2_dht_read.o
 	$(CC) -c -o $@ $< $(CFLAGS)
 	
 # The default rule - compiling our main program:
-all:	dht11 dht11_rrd
+all:	dht11
 		echo all: make complete
 		
 dht11: dht11.o $(objects)
-	$(CC) -o $@ $+ $(CFLAGS)
-
-dht11_rrd: dht11_rrd.o $(objects)
 	$(CC) -o $@ $+ $(CFLAGS)
 
 install: all
 		echo Copying files
 		test -d $(INSTALLDIR) || mkdir $(INSTALLDIR)			
 		cp ./dht11 /etc/dht11/
-		cp ./dht11_rrd /etc/dht11/
-		echo add Cron job
-		crontab -l | grep -q '#dht11_job' ||  crontab -l; echo "* * * * * /etc/dht11/dht11_rrd > /tmp/dht11.log 2>&1 #dht11_job"  | crontab -;
 		echo Done!!
 
 .PHONY: clean
