Add influxdb integration

--- a/htu21d_driver/Makefile
+++ b/htu21d_driver/Makefile
@@ -4,6 +4,7 @@ CC=g++
 CFLAGS= -std=gnu99 -lrt -lm
 DEPS = htu21d.h 
 INSTALLDIR = /etc/htu21d
+SCRIPTDIR = ~/bin/
 objects = main.o 
 
 #make predefined:
@@ -24,6 +25,13 @@ install: all
 		echo Copying files
 		test -d $(INSTALLDIR) || mkdir $(INSTALLDIR)			
 		cp ./htu21d /etc/htu21d/
+		echo Done!!
+
+install_script: all
+		echo Copying files
+		test -d $(SCRIPTDIR) || mkdir $(SCRIPTDIR)			
+		cp ./post_to_influx.sh $(SCRIPTDIR)
+		(crontab -l 2>/dev/null; echo "*/5 * * * * ~/bin/post_to_influx.sh living_room htu21d  >/dev/null 2>&1") | sort - | uniq - | crontab -
 		echo Done!!
 
 .PHONY: clean
